# sudoku-game

./: Makefile  README.md  pyproject.toml
doc/: doc_game.excalidraw
sudoku_game/: game.py  game_ui.py  main.py
