[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "play-sudoku"
version = "0.0.2"
authors = [
    {name = "4sushi"},
]
description = "Sudoku game, made with python & curses. Play in the terminal. For Linux, Mac OS and Windows."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["game", "sudoku", "curses"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['windows-curses >= 2.3.2 ; platform_system == "Windows"']

[project.scripts]
play-sudoku = "sudoku_game.main:main"
sudoku = "sudoku_game.main:main"

[project.urls]
Homepage = "https://github.com/4sushi/sudoku-game"